= {project-name} Changelog
:project-name: Kramdown AsciiDoc
:uri-repo: https://github.com/asciidoctor/kramdown-asciidoc

This document provides a high-level view of the changes to {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== 1.0.0.alpha.13 (2018-08-21) - @mojavelinux

=== Added

* drop ID on section title if matches auto-generated value when :lazy_ids API option / --lazy-ids CLI option is set (#16)
* auto-generate IDs for section titles when :auto_ids option is set and :input is not GFM
* add :postprocess callback option to `convert` and `convert_file` API methods (#53)

=== Changed

* automatically set idprefix, if necessary, based on value of :auto_id_prefix option when :auto_ids options is set (#16)
* don't modify value of :attributes option passed to `convert` and `convert_file` API methods
* define ID containing a dot using longhand attribute assignment (#59)
* extract raw text consistently regardless of input flavor (#56)
* sort attributes in document header (#55)

=== Fixed

* enclose codeblock content in literal block delimiters if content starts with a list marker (#57)

=== Details

{uri-repo}/releases/tag/v1.0.0.alpha.13[git tag] | {uri-repo}/compare/v1.0.0.alpha.12\...v1.0.0.alpha.13[full diff]

== 1.0.0.alpha.12 (2018-08-11) - @mojavelinux

=== Added

* encode Markdown source passed to `convert` to UTF-8 with universal newlines unless :encode option is false
* `convert_file` now writes output to file specified by :to option, if given (#40)
* `convert_file` now returns output as string when value of :to option is falsy (#39)
* IO object can be used as value of :to option in `convert` and `convert_file` (#43)
* intermediate directories are now created in `convert` instead of `convert_file` (#45)
* `convert_file` now writes output file using explicit UTF-8 encoding (#46)
* prevent `convert_file` from using input file as implicit output file